--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,7 @@
     "permissions": [
         "storage",
         "webRequest",
+        "devtools",
         "<all_urls>",
         "http://localhost:11434/*",
         "http://127.0.0.1:11434/*"
